# python-Redfish-API-data-fetch

./: README.md  app.py  cpu_temp.json  fan_speed.json  get_data.py  get_data_class.py  memory_temp.json  power_usage.json  pyproject.toml
